test/testdata/variables/undeclared_access_error_local_declared_after_access.lox
{
    x = 1; // error: x has been used before its declaration
    var x;
}
